--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@mapbox/react-native-mapbox-gl": "^6.0.3-rc1",
     "axios": "^0.17.1",
     "expo": "^25.0.0",
     "expo-three": "^2.2.2-alpha.0",
     "geolib": "^2.0.24",
     "react": "16.2.0",
+    "react-feather": "^1.0.8",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
     "react-native-router-flux": "^3.43.0",
