--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
   "extends": "fullstack",
   "parser": "babel-eslint",
 	"rules": {
-    "semi": 0,
+    "semi": ["error", "never"],
     "complexity": ["error", 200],
     "new-cap": [1, { "capIsNewExceptions": ["StackNavigator"] }],
     "no-use-before-define": "off",
