--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "three": "^0.89.0"
   }
