--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "cannon": "^0.6.2",
     "expo": "^25.0.0",
     "expo-three": "^2.2.2-alpha.0",
     "geolib": "^2.0.24",
