--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
+    "react-native-leaderboard": "^1.0.4",
     "react-native-router-flux": "^3.43.0",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
