erroring when trying to download .json font assets

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "semi": ["error", "never"],
     "complexity": ["error", 200],
     "new-cap": [1, { "capIsNewExceptions": ["StackNavigator"] }],
+    "react/jsx-pascal-case": [1, {"allowAllCaps": true}],
     "no-use-before-define": "off",
     "class-methods-use-this": "off",
     "no-return-assign": "off"
