--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-elements": "^0.19.0",
     "react-native-leaderboard": "^1.0.4",
     "react-native-router-flux": "^3.43.0",
-    "react-navigation": "^1.0.0-beta.27",
+    "react-navigation": "1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
